cleanup and document
Things were split over an unnecessary number of files which might be
helpful for comprehension at 4am but not best practice. Began to
improve the level of test coverage. This along with documentation
coverage should have been priority from beginning, will be better about
it.

--- a/wercker.yml
+++ b/wercker.yml
@@ -7,7 +7,7 @@ dev:
           go get github.com/constabulary/gb/...
           gb build all
           gb test all
-        reload: true
+        reload: false
 
 build:
 
@@ -25,13 +25,13 @@ build:
         name: gb build
         code: gb build all
 
-    - script: # Still not sure about this bit
-        name: go build
-        code: CGO_ENABLED=0 go build -a -ldflags '-s' -installsuffix cgo -o bin/lxy lxy
+    #- script: # Still not sure about this bit. Can build static binary with gb?
+    #    name: go build
+    #    code: CGO_ENABLED=0 go build -a -ldflags '-s' -installsuffix cgo -o bin/lxy lxy
 
-    - script:
-        name: create lxy-controller.json
-        code: cluster/create_lxy-controller.json.sh
+    #- script:
+    #    name: create lxy-controller.json
+    #    code: cluster/create_lxy-controller.json.sh
 
     - script:
         name: copy binary
